Java 16 migration for Map repository examples.
See #606.